# DRF

./: .gitignore  Dockerfile  README.md  pyproject.toml
contactapi/: settings.py  urls.py
contactapi/conf/: config.py
contactapi/database/: connect_db.py
contacts/: api.py  models.py  serializers.py  urls.py
contacts/migrations/: 0001_initial.py  0002_alter_contact_phone.py  0003_alter_contact_first_name_alter_contact_last_name_and_more.py  0004_user_contact_user.py  0005_delete_user_remove_contact_user.py
